<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bannerHeaderTitle"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/accentColor"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txtGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textHeader"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/header_banner_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/archivo_black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/txtGuide"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        style="@style/Theme.SIMTAK.Font"
        android:text="@string/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containeretServerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGuide">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etServerAddressLayout"
            android:layout_width="235sp"
            android:layout_height="wrap_content"
            android:hint="@string/serverAddress"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnConnectToServer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.SIMTAK.EditTextOutlined"
                android:inputType="textUri"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConnectToServer"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="63sp"
            android:layout_height="65sp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="5dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_plug_connection"
            app:iconSize="30dp"
            android:contentDescription="@string/content_connect_to_provider_server_address_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etServerAddressLayout"
            app:layout_constraintTop_toTopOf="@id/etServerAddressLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dividerOROptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/containeretServerAddress"
        >

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/d1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtOr"/>
        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="10dp"
            />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/d2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtOr"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnScanQrCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        style="@style/Theme.SIMTAK.Button"
        android:text="@string/scanQRCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerOROptions" />

    <TextView
        android:id="@+id/footerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnGithubProject"
        android:layout_marginBottom="10dp"
        style="@style/Theme.SIMTAK.Font.InfoLight"
        android:text="@string/footerInfo"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGithubProject"
        style="@style/Theme.SIMTAK.Button.TextIconLightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/footerProject"
        app:icon="@drawable/ic_github"
        app:layout_constraintBottom_toTopOf="@id/footerLinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/footerLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWiki"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.SIMTAK.Button.TextIconLightButton"
            app:icon="@drawable/ic_wiki_book"
            android:text="@string/wiki"
            android:layout_weight="1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiscord"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.SIMTAK.Button.TextIconLightButton"
            app:icon="@drawable/ic_discord"
            android:text="@string/joinOurGiscordGroup"
            android:layout_weight="1"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSteamProject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Theme.SIMTAK.Button.TextIconLightButton"
            app:icon="@drawable/ic_steam"
            android:text="@string/steam"
            android:layout_weight="1"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>