<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".trackerLog.TrackerLogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            style="Theme.SIMTAK.Button.BackBtnNoBg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/fullTranslucent"
            android:foreground="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            style="@style/Theme.SIMTAK.Font.TitleMediumDarkGrey22sp"
            android:text="@string/trackerLog"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/topPanel">

        <TextView
            android:id="@+id/txtServerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.SIMTAK.Font"
            android:text="@string/serverAddressPropertyEmpty"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtServerConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.SIMTAK.Font"
            android:text="@string/serverConnectionStatusPropertyEmpty"
            app:layout_constraintTop_toBottomOf="@id/txtServerAddress"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/containerLogTracker"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/softLightGrey"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtServerConnectionStatus">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLogTracker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="5"
                tools:listitem="@layout/item_log_tracker"
                android:background="@color/white" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startService"
            style="@style/Theme.SIMTAK.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/startTracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerLogTracker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopService"
            style="@style/Theme.SIMTAK.Button.TextIconLightButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="17sp"
            android:text="@string/stopTracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startService" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>